--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -91,6 +91,7 @@
     padding: 18px;
     color: #333;
     border-bottom: 1px solid #eaeaea;
+    text-decoration: none;
 }
 
 .user__section__dropdown__item:first-child:hover {
@@ -102,7 +103,23 @@
 }
 
 .user__section__dropdown__item:last-child {
-    border-radius: 0 0 4px 4px;
+    border-radius: 0 0 6px 6px;
+    background: #ffcccb;
+    padding: 0;
+}
+
+.user__section__dropdown__item:last-child:hover {
+    background: #ef9a9a;
+}
+
+.user__section__dropdown__item button {
+    background: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    border: transparent;
+    cursor: pointer;
+    padding: 18px;
 }
 
 .user__section__dropdown__open {
@@ -119,7 +136,7 @@
     height: 32px;
     border: 2px solid #c1d5e0;
     border-radius: 6px;
-    margin-right: 16px;
+    margin-right: 24px;
 }
 
 .user__section__dropdown__item__usrMenu__userName {
