--- a/src/styles/Posts.css
+++ b/src/styles/Posts.css
@@ -7,7 +7,6 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 20px;
 }
 
 .post__item {
@@ -58,7 +57,6 @@
 
 .post__title {
     display: flex;
-    max-width: 976px;
     color: #333333;
     font-size: 1.25rem;
     font-weight: bold;
@@ -72,7 +70,6 @@
     align-items: center;
     justify-content: flex-start;
     margin-bottom: 20px;
-    max-width: 976px;
 }
 
 .post__tags__item {
@@ -90,7 +87,6 @@
 }
 
 .post__preview {
-    max-width: 976px;
     width: 100%;
     margin-bottom: 20px;
 }
@@ -105,12 +101,12 @@
     flex-wrap: wrap;
     color: #111111;
     font-size: 16px;
-    max-width: 976px;
     margin-bottom: 60px;
 }
 
 .post__open__btn {
     margin-bottom: 40px;
+    display: flex;
 }
 
 .post__open__btn a {
