--- a/src/styles/Companies.css
+++ b/src/styles/Companies.css
@@ -1,5 +1,5 @@
 .Companies {
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 /*Companies Head*/
@@ -72,4 +72,93 @@
     margin-top: 16px;
     background: white;
     padding: 20px;
+}
+
+.companies__body__tHead {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    grid-column-gap: 4px;
+    width: 100%;
+    margin-bottom: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid rgba(146,156,165,.4);
+}
+
+.companies__body__tHead__companyName {
+    display: flex;
+    align-items: center;
+}
+
+.companies__body__tHead__companyRating {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.companies__body__tHead__companySubscribers {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.companies__body__tItem {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+    grid-column-gap: 4px;
+    width: 100%;
+    max-width: 936px;
+    padding-bottom: 20px;
+}
+
+.companies__body__tItem__companyInfo {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.companies__body__tItem__companyInfo__logo {
+    display: flex;
+    align-items: flex-start;
+    margin-right: 8px;
+    height: 100%;
+}
+
+.companies__body__tItem__companyInfo__logo img {
+    width: 32px;
+    height: 32px;
+    border-radius: 4px;
+    border: 1px solid #c1d5e0;
+}
+
+.companies__body__tItem__companyInfo__block {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+}
+
+.companies__body__tItem__companyInfo__title {
+    color: #333;
+    font-weight: bold;
+    font-size: 18px;
+    padding-bottom: 8px;
+}
+
+.companies__body__tItem__companyInfo__description {
+    color: #777;
+}
+
+.companies__body__tItem__companyRating {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    color: #cd66cd;
+    font-size: 18px;
+}
+
+.companies__body__tItem__companySubscribers {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    color: #777;
+    font-size: 18px;
 }
